--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
   "development": {
-    "username": "root",
-    "password": "been0519",
-    "database": "sequelize_transaction",
-    "host": "express-database.cg7f69m1k85k.ap-northeast-2.rds.amazonaws.com",
-    "dialect": "mysql"
+    "username": "",
+    "password": "",
+    "database": "",
+    "host": "",
+    "dialect": "
   },
   "test": {
     "username": "root",
